<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SuccessViewFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/title_succes_view"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="@dimen/average_font_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/average_height"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="@dimen/margin_right"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/cardview_default_radius"
            app:cardElevation="@dimen/card_Elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical">

                <TextView
                    android:id="@+id/tvPaymentMethodName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding"
                    android:text="@string/tv_item_payment_method"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/tvPaymentMethodNameVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding"
                    android:text="@string/hello_blank_fragment"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|end">

                    <ImageView
                        android:id="@+id/ivEditPaymentMethod"
                        android:paddingEnd="@dimen/padding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_edit" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/itemCardIssuer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/average_height"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="@dimen/margin_right"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/cardview_default_radius"
            app:cardElevation="@dimen/card_Elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical">

                <TextView
                    android:id="@+id/tvCardIssuer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding"
                    android:text="@string/tv_item_bank"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/tvCardIssuerVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding"
                    android:text="@string/hello_blank_fragment"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|end">

                    <ImageView
                        android:id="@+id/ivEditCardIssuer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="@dimen/padding"
                        app:srcCompat="@drawable/ic_edit" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/itemInstallmentsCount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/average_height"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="@dimen/margin_right"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/cardview_default_radius"
            app:cardElevation="@dimen/card_Elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical">

                <TextView
                    android:id="@+id/tvInstallmentsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding"
                    android:text="@string/tv_item_installments"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/tvInstallmentsCountVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding"
                    android:text="@string/hello_blank_fragment"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|end">

                    <ImageView
                        android:id="@+id/ivEditInstallments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="@dimen/padding"
                        app:srcCompat="@drawable/ic_edit" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/average_height"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="@dimen/margin_right"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/cardview_default_radius"
            app:cardElevation="@dimen/card_Elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|left|center_vertical">

                <TextView
                    android:id="@+id/tvInstallmentsRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding"
                    android:text="@string/tv_item_rate"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/tvInstallmentsRateVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding"
                    android:text="@string/hello_blank_fragment"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/average_height"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginEnd="@dimen/margin_right"
            android:layout_marginBottom="@dimen/margin_bot"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/cardview_default_radius"
            app:cardElevation="@dimen/card_Elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical">

                <TextView
                    android:id="@+id/tvTotalAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding"
                    android:text="@string/tv_item_original_amount"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/tvTotalAmountVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding"
                    android:text="@string/hello_blank_fragment"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|end">

                    <ImageView
                        android:id="@+id/ivEditTotalAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="@dimen/padding"
                        app:srcCompat="@drawable/ic_edit" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/average_height"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="@dimen/margin_right"
            android:layout_marginBottom="@dimen/margin_bot"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/cardview_default_radius"
            app:cardElevation="@dimen/card_Elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvFinalAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/average_font_size"
                    android:text="@string/tv_item_final_amount"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/tvFinalAMountVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding"
                    android:textSize="@dimen/average_font_size"
                    android:text="@string/hello_blank_fragment"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/btnAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="@dimen/cardview_default_radius"
            app:cardElevation="@dimen/card_Elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/confirm"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/average_font_size"
                    android:textStyle="bold" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</LinearLayout>