<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AmountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/title_amount"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="@dimen/average_font_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/itemAmount"
                android:layout_width="match_parent"
                android:layout_height="@dimen/average_height"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginEnd="@dimen/margin_right"
                android:layout_marginBottom="@dimen/margin_bot"
                android:layout_marginTop="@dimen/margin_top"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="@dimen/cardview_default_radius"
                app:cardElevation="@dimen/card_Elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/sCurrency"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/average_height"/>

                    <EditText
                        android:id="@+id/etAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:ems="10"
                        android:hint="@string/amount"
                        android:inputType="number|numberDecimal"
                        android:padding="5dp"
                        android:textSize="@dimen/average_font_size"
                        tools:ignore="RtlHardcoded" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <android.support.v7.widget.CardView
                android:id="@+id/btnPM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginBottom="@dimen/margin_bot"
                android:layout_marginEnd="@dimen/margin_right"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="@dimen/cardview_default_radius"
                app:cardElevation="@dimen/card_Elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/next"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/average_font_size"
                        android:textStyle="bold" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>